Fix: Implement display overflow to prevent UI breaking

--- a/css/styles.css
+++ b/css/styles.css
@@ -41,7 +41,7 @@ body {
     background-color: var(--bg-screen);
     color: var(--text-main);
     text-align: right;
-    font-size: 3rem;
+    font-size: 2.9rem;
     border: none;
     border-radius: 10px;
     padding: 10px;
